--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -4,32 +4,7 @@
   </span>
   <ul>
     <li>
-      <span>Portfolio</span>
-      <ul>
-        <li>
-          <a routerLink="/dashboard">Overview</a>
-        </li>
-        <li>
-          <a routerLink="/accounts">Accounts</a>
-        </li>
-        <li>
-          <a routerLink="/expenses">Expenses</a>
-        </li>
-        <li>
-          <a routerLink="/dashboard" [queryParams]="{ v: 'net worth' }"
-            >Net Worth</a
-          >
-        </li>
-        <li>
-          <a routerLink="/stocks">Stocks</a>
-        </li>
-        <li>
-          <a routerLink="/options">Options</a>
-        </li>
-        <li>
-          <a routerLink="/dividends">Dividends</a>
-        </li>
-      </ul>
+      <a routerLink="/">Home</a>
     </li>
   </ul>
 </nav>
