Add form-floating class; setup sign up form on create profile page

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,5 +6,19 @@
     <li>
       <a routerLink="/">Home</a>
     </li>
+    <li>
+      <span>Profile</span>
+      <ul>
+        <li>
+          <a routerLink="/profile/new">Sign Up</a>
+        </li>
+        <li>
+          <a routerLink="/profile">Sign In</a>
+        </li>
+        <li>
+          <a routerLink="/profile">View</a>
+        </li>
+      </ul>
+    </li>
   </ul>
 </nav>
