--- a/src/app/components/pages/profile-pages/create-profile-page/create-profile-page.component.html
+++ b/src/app/components/pages/profile-pages/create-profile-page/create-profile-page.component.html
@@ -1,3 +1,76 @@
 <app-page>
-  <p>create-profile-page works!</p>
+  <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
+    <div class="form-floating">
+      <input
+        id="email"
+        class="form-control"
+        type="email"
+        placeholder="Email"
+        formControlName="email"
+      />
+      <label for="email">Email</label>
+    </div>
+    <div class="form-errors" *ngIf="form.controls.email.errors">
+      <ng-container *ngIf="form.controls.email.errors['required']"
+        >Field is required</ng-container
+      >
+      <ng-container *ngIf="form.controls.email.errors['email']"
+        >Field must be a valid email</ng-container
+      >
+    </div>
+    <div class="form-floating">
+      <input
+        id="password"
+        class="form-control"
+        type="password"
+        placeholder="Password"
+        formControlName="password"
+      />
+      <label for="password">Password</label>
+    </div>
+    <div class="form-errors" *ngIf="form.controls.password.errors">
+      <ng-container *ngIf="form.controls.password.errors['required']"
+        >Field is required</ng-container
+      >
+      <ng-container *ngIf="form.controls.password.errors['minlength']"
+        >Field must contain at least
+        {{ form.controls.password.errors["minlength"].requiredLength }}
+        characters</ng-container
+      >
+      <ng-container *ngIf="form.controls.password.errors['pattern']"
+        >Field must contain a lowercase letter, an uppercase letter, a number,
+        and a special character</ng-container
+      >
+    </div>
+    <div class="form-floating">
+      <input
+        id="validate-password"
+        class="form-control"
+        type="password"
+        placeholder="Password"
+        formControlName="validate password"
+      />
+      <label for="validate-password">Re-enter Password</label>
+    </div>
+    <div class="form-errors" *ngIf="form.controls['validate password'].errors">
+      <ng-container
+        *ngIf="form.controls['validate password'].errors['required']"
+        >Field is required</ng-container
+      >
+      <ng-container
+        *ngIf="form.controls['validate password'].errors['match other']"
+        >Passwords do not match</ng-container
+      >
+    </div>
+    <button
+      type="submit"
+      [disabled]="
+        form.controls.email.errors ||
+        form.controls.password.errors ||
+        form.controls['validate password'].errors
+      "
+    >
+      Sign Up
+    </button>
+  </form>
 </app-page>
