Simplify pages for now

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,13 +10,10 @@
       <span>Profile</span>
       <ul>
         <li>
-          <a routerLink="/profile/new">Sign Up</a>
+          <a routerLink="/user/sign-up">Sign Up</a>
         </li>
         <li>
-          <a routerLink="/profile">Sign In</a>
-        </li>
-        <li>
-          <a routerLink="/profile">View</a>
+          <a routerLink="/user/login">Sign In</a>
         </li>
       </ul>
     </li>
